--- a/src/pages/home/HomePage.modules.css
+++ b/src/pages/home/HomePage.modules.css
@@ -2,10 +2,42 @@
     display: flex;
     flex-flow: column;
 
+    overflow: hidden;
+
     width: 100%;
     height: 100%;
 }
-
-.Content {
+.NavContainer {
     display: flex;
+    flex-flow: row;
+
+    width: 100%;
+    height: 100%;
+}
+.Content {
+    padding: 10px;
+    display: flex;
+    flex-flow: column;
+
+    overflow: auto;
+
+    width: 100%;
+    height: 100%;
+
+    background: #3B7302;
+    background: linear-gradient(#3B7302, #244700);
+}
+
+.Content::-webkit-scrollbar {
+    width: 6px;
+    background-color: #F5F5F5;
+}
+
+.Content::-webkit-scrollbar-thumb {
+    background-color: #6c6c6c;
+}
+
+.Content::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
 }
