--- a/src/pages/home/HomePage.modules.css
+++ b/src/pages/home/HomePage.modules.css
@@ -22,7 +22,7 @@
     overflow: auto;
 
     width: 100%;
-    height: 100%;
+    height: calc(100vh - 75px);
 
     background: #3B7302;
     background: linear-gradient(#3B7302, #244700);
