--- a/src/_components/ui/navigation/Navigation.modules.css
+++ b/src/_components/ui/navigation/Navigation.modules.css
@@ -1,6 +1,18 @@
 .NavigationBar {
-    width: 80px;
+    width: 0;
+    min-width: 0;
     height: 100%;
-
     background-color: #37474F;
+
+    transform: translateX(-80px);
+    transition:
+            transform 0.25s ease-out,
+            width 0.25s ease-out,
+            min-width 0.25s ease-out;
+}
+
+.NavigationBar.Opened {
+    transform: translateX(0);
+    min-width: 80px;
+    width: 80px;
 }
