--- a/src/_components/ui/toolbar/Toolbar.modules.css
+++ b/src/_components/ui/toolbar/Toolbar.modules.css
@@ -13,12 +13,13 @@
 
 .Profile {
     display: flex;
-    margin-left: 10px;
+    margin-right: 10px;
+    justify-content: flex-end;
     flex: 1;
 }
 
 .Profile span {
-    margin-left: 5px;
+    margin-right: 5px;
     align-self: center;
 }
 
@@ -29,9 +30,8 @@
 }
 
 .Settings {
-    margin-right: 10px;
+    margin-left: 10px;
     display: flex;
-    justify-content: flex-end;
     flex: 1;
 }
 
@@ -40,6 +40,10 @@
     align-self: center;
     background-color: transparent;
     border: none;
+}
+
+.Gear:focus {
+    outline: none;
 }
 
 .Gear img {
